--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-router-dom": "^6.16.0",
+    "sanitize-html": "^2.11.0",
     "styled-components": "^6.0.8",
     "swiper": "^10.2.0"
   },
